workshop03/code-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-deploy
  namespace: codens
  labels:
    app: code
    dept: eng
spec:
  replicas: 3
  selector:
    matchLabels:
      app: code
      dept: eng
  template:
    metadata:
      labels:
        app: code
        dept: eng
    spec:
      volumes:
        - name: code-vol
          persistentVolumeClaim:
            claimName: code-pvc
      containers:
        - name: code-container
          image: linuxserver/code-server:amd64-4.17.0
          imagePullPolicy: IfNotPresent # Always if tag is latest
          ports:
            - containerPort: 8443
              protocol: TCP

          volumeMounts:
            - name: code-vol
              mountPath: /config
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8443
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: code-svc
  namespace: codens
  labels:
    app: code
    dept: eng
spec:
  type: ClusterIP
  selector:
    app: code
    dept: eng
  ports:
    - port: 8443 # Service port
      protocol: TCP
      targetPort: 8443 # Container port
