workshop03/code-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-ing
  namespace: codens
  labels:
    app: code
    name: code-ing
spec:
  ingressClassName: nginx
  rules:
    - host: code-139.59.219.226.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix # Other options are: Exact, ImplementationSpecific
            backend:
              service:
                name: code-svc
                port:
                  number: 8443
